<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Udacity Music Player</string>
    <string name="content_authority">com.udacity.vinhphuc.musicplayer</string>

    <string name="action_settings">Settings</string>

    <string name="accessibility_play">Play</string>
    <string name="accessibility_play_all">Play all</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>
    <string name="accessibility_shuffle">Shuffle</string>
    <string name="accessibility_shuffle_all">Shuffle all</string>
    <string name="accessibility_repeat">Repeat</string>
    <string name="accessibility_repeat_all">Repeat all</string>
    <string name="accessibility_repeat_one">Repeat one</string>
    <string name="accessibility_queue">Open queue</string>
    <string name="accessibility_browse">Browse music</string>

    <string name="menu_sort_by">Sort by</string>
    <string name="sort_order_entry_az">A-Z</string>
    <string name="sort_order_entry_za">Z-A</string>
    <string name="sort_order_entry_artist">Artist</string>
    <string name="sort_order_entry_album">Album</string>
    <string name="sort_order_entry_year">Year</string>
    <string name="sort_order_entry_track_number">Track Number</string>
    <string name="sort_order_entry_duration">Duration</string>
    <string name="sort_order_entry_date_added">Date added</string>
    <string name="sort_order_entry_track_list">Track list</string>
    <string name="sort_order_entry_number_of_songs">Number of songs</string>
    <string name="sort_order_entry_number_of_albums">Number of albums</string>
    <string name="sort_order_entry_filename">Filename</string>

    <string name="error_playing_track">Error Playing track</string>

    <string name="auto_playlist">Auto\nPlaylist</string>
    <string name="playlist_last_added">Last Added</string>
    <string name="playlist_recently_played">Recently Played</string>
    <string name="playlist_top_tracks">My Top Tracks</string>
    <string name="playlist_favourite_tracks">Favourite Songs</string>

    <string name="linkedin">LinkedIn</string>
    <string name="github">GitHub</string>
    <string name="stackoverflow">StackOverflow</string>

    <string name="menu_show_as">View As</string>
    <string name="menu_show_as_entry_list">List</string>
    <string name="menu_show_as_entry_grid">Grid</string>
    <string name="menu_show_as_entry_default">Default</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>

    <string name="last_opened">Last Opened</string>

    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="library">Library</string>
    <string name="playlists">Playlists</string>
    <string name="playing_queue">Playing Queue</string>
    <string name="now_playing">Now Playing</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="search">Search</string>
    <string name="action_shuffle_all">Shuffle All</string>
    <string name="action_equalizer">Equalizer</string>
    <string name="not_found_equalizer">Equalizer not found</string>
    <string name="search_library">Search Library</string>

    <string name="select_theme">Select Theme</string>
    <string name="choose_theme_throughout">Choose a theme to be used throughout the app.</string>
    <string name="choose_start_page">Choose the start page to be displayed on launch.</string>
    <string name="start_page">Start page</string>
    <string name="artist_in_grid">Artists in Grid</string>
    <string name="toggle_artists_grid">Toggle for displaying artists in a 2x2 grid.</string>
    <string name="toggle_system_animations">Toggle for system animations throughout the app.</string>
    <string name="system_animations">System animations</string>
    <string name="toggle_animations">Toggle for Transition animation throughout the app.</string>
    <string name="animations">Animations</string>
    <string name="now_playing_selector">Choose a now playing screen from 4 different styles.</string>
    <string name="personalisation">Personalisation</string>
    <string name="other">Other</string>
    <string name="advanced">Advanced</string>
    <string name="app_about_opensource">Udacity Music Player is the Capstone Project of Phuc Hoang Vinh Truong for the Android Developer Nanodegree 2018 program</string>
    <string name="summary_pause_detach">Toggle for pausing playback when headphone is detached</string>
    <string name="pause_detach">Pause on Detach</string>
    <string name="summary_xposed_trackselector">Requires Xposed and XMediaNotificationTrackSelector Xposed module to be installed. This will provide access to playing queue from the notification bar itself.</string>
    <string name="xposed_trackselector">Playing queue support in notification</string>
    <string name="currently_selected">Currently Selected</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>

    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>

    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>

    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>

    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>

    <string name="albumart">The album art of the song</string>
    <string name="albumart_lockscreen">Lockscreen</string>
    <string name="albumart_lockscreen_summary">Show album art in lockscreen</string>

    <string name="artist_image">Artist image</string>

    <string name="load_artist_album_image">Load artist/album images</string>
    <string name="load_artist_album_image_summary">Load artist/album images from lastfm</string>

    <string name="load_artist_album_image_mobile">Load artist/album images on mobile data</string>
    <string name="load_artist_album_image_mobile_summary">Load artist/album images even if there is no wifi</string>

    <string name="gestures">Gestures</string>
    <string name="switching_tracks_by_gestures">Switching tracks using gestures</string>
    <string name="widget_standard">MusicPlayer standard widget</string>
    <string name="widget_small">MusicPlayer small widget</string>
    <string name="tap_to_start">Tap to start MusicPlayer</string>
    <string name="widget_white">MusicPlayer light widget</string>

    <string name="count_song"><xliff:g id="count">%d</xliff:g> song</string>
    <string name="count_songs"><xliff:g id="count">%d</xliff:g> songs</string>
    <string name="count_album"><xliff:g id="count">%d</xliff:g> album</string>
    <string name="count_albums"><xliff:g id="count">%d</xliff:g> albums</string>
    <string name="count_artist"><xliff:g id="count">%d</xliff:g> artist</string>
    <string name="count_artists"><xliff:g id="count">%d</xliff:g> artists</string>

    <string name="number_song_add_queue"><xliff:g example="1" id="number">%d</xliff:g> song added to the queue.</string>
    <string name="number_songs_add_queue"><xliff:g example="1" id="number">%d</xliff:g> songs added to the queue.</string>
    <string name="number_song_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> song added to playlist.</string>
    <string name="number_songs_add_playlist"><xliff:g example="1" id="number">%d</xliff:g> songs added to playlist.</string>


    <!--do not translate these strings-->
    <string name="combine_two_strings" translatable="false">%1$s | %2$s</string>
    <string name="duration_format" translatable="false"><xliff:g id="hours">%1$s</xliff:g> <xliff:g id="minutes">%2$s</xliff:g></string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>

    <string name="play">Play</string>

    <string name="add_to_playlist">Add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="show_auto_playlists">Show auto playlists</string>
    <string name="hide_auto_playlists">Hide auto playlists</string>
    <string name="playlist_image">Playlist image</string>

    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="created_playlist">Created playlist</string>
    <string name="unable_creating_playlist">Unable to create playlist</string>

    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="new_playlist">New playlist</string>
    <string name="share">Share</string>
    <string name="delete_from_device">Delete from device</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete</string>
    <string name="are_you_sure_to_delete_playlist">Are you sure you want to delete playlist</string>

    <string name="nothing_found">Nothing found</string>
    <string name="no_songs">No songs found on this device</string>
    <string name="no_songs_queued">No songs in queue</string>
    <string name="folders">Folders</string>
    <string name="select_storage">Select storage</string>

    <string name="clear">Clear</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="menu_show_lyrics">Show lyrics</string>
    <string name="no_lyrics_checking_message">Sorry, We don\'t have lyrics for this song yet.\\n</string>
    <string name="no_lyrics">No lyrics found.</string>
    <string name="lyrics_makeitpersonal">Powered by <a href="https://makeitpersonal.co/">makeitpersonal.co</a></string>
    <string name="cast">Cast</string>
    <string name="now_playing_no_track_selected">\"No current track selected.</string>
    <string name="lyrics_loading">Loading...</string>

    <string name="no_media_found">No media found</string>

    <string name="read_external_storage_message">Udacity Music Player will need to read external storage to display songs on your device.</string>

    <!--Delete Dialog-->
    <string name="delete_playlist_dialog_title">Delete playlist?</string>
    <string name="delete_song_dialog_title">Delete song?</string>

    <!--Profile references-->
    <string name="urlLinkedin">https://www.linkedin.com/in/phuc-truong-200296</string>
    <string name="urlGitHub">https://github.com/thvphuc246</string>

    <string name="fastscroller">Fast Scroller handle</string>
    <string name="blur_frame">Blur frame</string>
    <string name="popup_menu">Popup menu</string>
    <string name="cast_menu">Cast</string>

</resources>
