<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_translucent"
    android:padding="4dp">

    <ImageView
        android:id="@+id/imageView_cover"
        android:contentDescription="@string/albumart"
        android:padding="4dp"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/imageView_cover"
        android:lines="1"
        android:text="@string/tap_to_start"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView_title"
        android:layout_toEndOf="@id/imageView_cover"
        android:lines="1"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textView_subtitle"
        android:layout_toEndOf="@id/imageView_cover"
        android:gravity="bottom"
        tools:ignore="Suspicious0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/image_prev"
            android:contentDescription="@string/accessibility_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_item_background"
            android:tint="@android:color/black"
            android:src="@drawable/ic_previous_track" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/image_playpause"
            android:contentDescription="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_item_background"
            android:tint="@android:color/black"
            android:src="@drawable/ic_play" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/image_next"
            android:contentDescription="@string/accessibility_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selectable_item_background"
            android:tint="@android:color/black"
            android:src="@drawable/ic_next_track" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>