<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="15dp"
    android:layout_margin="15dp">


    <TextView
        android:id="@+id/app_version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body1"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timber_about_opensource"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/linkedin"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat.Body1"/>

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/github"
            android:textSize="18sp"
            style="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dismiss_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_gravity="end"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:background="?selectableItemBackgroundBorderless"/>

</LinearLayout>