<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            app:layout_heightPercent="65%">

            <ImageView
                android:id="@+id/album_art"
                android:contentDescription="@string/albumart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#22000000" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/appBarTopMargin"
                android:background="@android:color/transparent"
                android:theme="@style/Theme.AppCompat"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/detailView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/headerView"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/song_title"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="100dp"
                        android:width="800dp"
                        android:ellipsize="marquee"
                        android:fadingEdge="horizontal"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/song_artist"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:width="800dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingTop="3dp"

                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/shuffle"
                        android:contentDescription="@string/accessibility_shuffle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:scaleType="center" />

                    <ImageView
                        android:id="@+id/repeat"
                        android:contentDescription="@string/accessibility_repeat"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:scaleType="center" />
                </LinearLayout>
            </RelativeLayout>

            <SeekBar
                android:id="@+id/song_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxHeight="2dp"
                android:paddingTop="10dp"
                android:progress="30"
                android:tag="tint_accent_color" />


            <TextView
                android:id="@+id/song_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/song_elapsed_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:paddingStart="25dp"
                    android:paddingEnd="0dp"/>

                <TextView
                    android:id="@+id/song_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingStart="0dp"
                    android:paddingEnd="25dp" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/previous"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp"
                    android:layout_weight="0.6"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    app:materialIcon="skip_previous"
                    app:materialIconColor="?attr/iconColor"
                    app:materialIconSize="35dp" />

                <FrameLayout
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">


                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/playpausefloating"
                        android:contentDescription="@string/accessibility_play"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_gravity="center"
                        android:focusable="true"
                        android:scaleType="fitCenter"
                        android:tag="bg_tint_accent_color" />
                </FrameLayout>

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/next"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="0.6"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:scaleType="center"
                    app:materialIcon="skip_next"
                    app:materialIconColor="?attr/iconColor"
                    app:materialIconSize="35dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>


</android.support.design.widget.CoordinatorLayout>